set timer and display question one after another

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	<button type="submit" id="startGame">Want to play?</button>
 
 	<div class="question-timer"></div>
-	
-	<div class="answer-timer"></div>
 
 	<div class="question"></div>
+	
+	<div class="correct"></div>
+
+	<div class="incorrect"></div>
 
 	<div class="answerChoices"></div>
 
