adds console.logs

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 	<div class="question-timer"></div>
 
 	<div class="question"></div>
+
+	<div class="answerChoices"></div>
 	
 	<div class="correct"></div>
 
 	<div class="incorrect"></div>
 
-	<div class="answerChoices"></div>
-
 	<div class="correctImage"></div>
+
+	<div class="score"></div>
 
 
 <script
