add CSS and put functions into game object

--- a/index.html
+++ b/index.html
@@ -2,27 +2,38 @@
 <html>
 <head>
 	<title>Trivia Time!</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Iceberg" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
-	<button type="submit" id="startGame">Want to play?</button>
-
-	<div class="question-timer"></div>
-
-	<div class="question"></div>
-
-	<div class="answerChoices"></div>
 	
-	<div class="correct"></div>
+	<div id="startButton">
+		<button type="submit" id="startGame">Ready to play?</button>
+	</div>
+	
+	
+	<div class="container">
 
-	<div class="incorrect"></div>
+		<div class="question-timer"></div>
 
-	<div class="correctImage"></div>
+		<div class="question"></div>
 
-	<div class="score"></div>
+		<div class="answerChoices"></div>
 
+	</div>
+	
+	<div class="scoreBox">
+	
+		<div class="correct"></div>
+	
+		<div class="incorrect"></div>
+
+		<div class="correctImage"></div>
+
+		<div class="score"></div>
+	</div>
 
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
